[tool.poetry]
name = "trevorspray"
version = "2.0.0"
description = "A modular password sprayer with threading, SSH proxying, loot modules, and more"
authors = ["TheTechromancer"]
license = "GPL-3.0"
repository = "https://github.com/blacklanternsecurity/TREVORspray"
homepage = "https://github.com/blacklanternsecurity/TREVORspray"

[tool.poetry.dependencies]
python = "^3.6"
Pygments = "^2.10.0"
sh = "^1.14.2"
PySocks = "^1.7.1"
exchangelib = "^4.6.1"
trevorproxy = "^1.0.3"
tldextract = "^3.1.2"

[tool.poetry.scripts]
trevorspray = 'trevorspray.cli:main'

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
